[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Kenneth Jonsson <kjonsson@windriver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
num = "0.1.28"
num-derive = "0.2"
num-integer = "0.1.39"
num-traits = "0.2"
permutohedron = "0.2.4"
regex = "1"
